--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
 
   <meta name="theme-color" content="#3b0764" />
   <link rel="shortcut icon" href="./link.svg" type="image/svg+xml">
-  <title>Links</title>
+  <title>Meus Links</title>
 
   <meta name="description" content="Um site para compartilhar minhas redes sociais e outros links.">
 
